--- a/src/pages/Price/index.scss
+++ b/src/pages/Price/index.scss
@@ -32,4 +32,9 @@
     margin-top: 15px;
     font-weight: bold;
   }
+  @media(max-width: 768px) {
+    &__wrapper {
+      grid-template-columns: 1fr;
+    }
+  }
 }
