--- a/src/components/Album/index.scss
+++ b/src/components/Album/index.scss
@@ -1,4 +1,6 @@
 .Album {
+  // width: 800px;
+  // overflow: hidden;
   &__wrapper {
     width: 1260px;
     display: grid;
@@ -18,16 +20,14 @@
       &:nth-child(1) {
         width: 100%;
         height: 100%;
-        background: red;
         grid-column-start: 1;
         grid-column-end: 3;
-        grid-row-start: 1;
+        grid-row-start:  1;
         grid-row-end: 3;
       }
       &:nth-child(2) {
         width: 100%;
         height: 100%;
-        background: blue;
         grid-column-start: 3;
         grid-column-end: 4;
         grid-row-start: 1;
