--- a/src/components/Logo/index.scss
+++ b/src/components/Logo/index.scss
@@ -1,11 +1,20 @@
 .Logo {
-  width: 300px;
-  height: 100px;
-  background: red;
+  width: 200px;
+  height: 200px;
   margin: 0 auto;
+  border-radius: 50%;
   > a {
     display: block;
     width: 100%;
     height: 100%;
+    > img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+  @media(max-width: 768px){
+    &.header {
+      margin-top: 110px;
+    }
   }
 }
