--- a/src/components/Services/index.scss
+++ b/src/components/Services/index.scss
@@ -3,26 +3,25 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
-  }
-  &__items {
-    width: 100%;
-    > h3 {
-      margin-bottom: 20px;
+    > section {
+      > h3 {
+        margin-bottom: 15px;
+        color: rgba(#f00, .5);}
+      }
+    }
+    &__list {
+      display: none;
+      width: 100%;
+      > h3 {
+        margin-bottom: 20px;
+      }
+      &-activate {
+        display: block;
     }
   }
   &__item {
     margin: 0 60px 20px;
     padding: 5px 10px;
-    border: 1px solid rgba(#0f0, .5);
-    border-radius: 5px;
-    background: rgba(#0f0, .1);
-  }
-  &__description {
-    display: none;
-    margin-top: 10px;
-  }
-  &__activate {
-    display: block;
   }
   &__btn {
     margin-top: 10px;
@@ -32,5 +31,15 @@
     background: rgba(#00f, .1);
     padding: 2px 7px;
     cursor: pointer;
+  }
+  @media(max-width: 768px) {
+    &__wrapper {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @media(max-width: 480px) {
+    &__wrapper {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 }
