--- a/src/components/MainMenu/index.scss
+++ b/src/components/MainMenu/index.scss
@@ -7,6 +7,18 @@
       text-transform: uppercase;
       font-weight: bold;
       font-size: 24px;
+      display: flex;
+      align-items: center;
+      > svg {
+        font-size: 30px;
+        margin-right: 15px;
+      }
+      &:hover {
+        color: rgba(#f00, .5);
+      }
+      &.selected {
+        color: rgba(#f00, .8);
+      }
     }
   }
   @media(max-width: 768px){
