--- a/src/components/Services/index.scss
+++ b/src/components/Services/index.scss
@@ -3,7 +3,11 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
+    // display: flex;
+    // justify-content: space-around;
+    // flex-wrap: wrap;
     > section {
+      // width: 300px;
       > h3 {
         margin-bottom: 15px;
         color: rgba(#f00, .5);}
