--- a/src/pages/Price/index.scss
+++ b/src/pages/Price/index.scss
@@ -1,4 +1,12 @@
 .Price {
+  > p {
+    margin: 0 15px 15px;
+    font-size: 22px;
+    text-align: justify;
+    > span {
+      font-weight: bold;
+    }
+  }
   &__wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr;
